docs/style/style.scss
// font import
@import url('https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Tilt+Neon&display=swap');

//reset
* {
    padding: 0;
    margin: 0;
    list-style: none;
}

a:link,
a:visited,
a:hover,
a:active {
    text-decoration: none;
    color: white;
}

h1 {
    font-size: 42px;
    font-family: 'Cutive Mono', monospace;
}

h2 {
    font-size: 32px;
    font-family: 'Cutive Mono', monospace;
}

p {
    font-size: 20px;
    font-family: 'Tilt Neon', cursive;
}

body {
    scroll-behavior: smooth;
}

.bodyScrollDisabled {
    height: 100vh;
    overflow: hidden;
}

// style
.wrapper {
    max-width: 1440px;
    padding: 100px 6% 30px;
    margin: auto;
}

.navbar {
    background-color: white;
    width: 88%;
    padding: 15px 6%;
    height: 40px;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    z-index: 99;

    &--logo {
        font-size: 24px;
        background-color: black;
        border-radius: 50%;
        color: white;
        width: 37px;
        height: 37px;
        padding: 5px;
        display: flex;
        align-items: center;
        justify-content: center;
        cursor: pointer;
    }

    &--menu {
        width: 32px;
        height: 20px;

        &__hamburger {
            display: flex;
            flex-direction: column;
            gap: 5px;
            cursor: pointer;

            span {
                display: block;
                background-color: black;
                height: 3px;
                width: 80%;
                transition: 0.3s ease-in-out;

                &:nth-child(even) {
                    align-self: flex-end;
                }
            }

            //hover effecet
            &:hover {
                span {
                    width: 32px;
                }
            }
        }

        .hamburgerClickEffect {
            position: relative;
            z-index: 99;

            span {
                background-color: white;
                position: fixed;

                &:nth-child(even) {
                    display: none
                }

                ;

                &:nth-child(odd) {
                    width: 32px;
                }

                &:first-child {
                    position: absolute;
                    top: 5px;
                    transform: rotate(45deg);
                }

                &:last-child {
                    position: absolute;
                    top: 5px;
                    transform: rotate(-45deg);
                }
            }
        }

        &__list {
            //positioning
            position: fixed;
            width: 100%;
            height: 100vh;
            left: 0;
            top: 0;

            background-color: rgba(0, 0, 0, 0.672);
            color: white;
            display: flex;
            flex-direction: column;
            align-items: center;
            justify-content: center;
            gap: 16px;
            font-size: 32px;
            transform: translateY(0%);
            transition: 0.3s ease-in-out;

            li {
                transform: translateY(0%);
                opacity: 1;
                transition: 0.3s ease-in-out;
            }

            .liClickEffect {
                position: fixed;
                transform: translateY(-200%);
                opacity: 0;
            }
        }

        .menuClickEffect {
            transform: translateY(-100%);
        }
    }
}

//main
.main {
    display: flex;
    flex-direction: column;
    gap: 30px;

    // width: 100%;
    // height: auto;
    &--text {
        max-width: 400px;

        &__title {
            font-weight: bold;
        }
    }

    &--media {
        width: 100%;
        max-width: 500px;

        &__img1 {
            width: 100%;
            height: auto;
        }
    }
}

//about me
.about {
    display: flex;
    flex-direction: column;

    &--text {
        width: 100%;
        display: flex;
        flex-direction: column;
        gap: 47px;
        height: 258px;
    }

    &--media {
        width: 100%;
        height: auto;
        margin-top: 30px;

        &__img {
            display: block;
            width: 100%;
            height: auto;
        }
    }
}

//skills
.skills {
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-top: 50px;
    gap: 2.5rem;

    &--carousel {
        display: flex;
        width: 100%;
        overflow-x: scroll;

        .carousel--wrapper {
            max-width: 620px;
            display: flex;
            flex-direction: row;
            gap: 20px;

            &__item {
                width: 60px;
                height: auto;

                img {
                    width: 100%;
                    height: auto;
                }
            }
        }

        &::-webkit-scrollbar {
            display: none;
        }
    }
}

.skillPc {
    display: none;
}

.experiences {
    .experience {
        position: sticky;
        top: 0vh;
        padding-top: 36px;
        padding-bottom: 64px;
        border-radius: 10px;
        background-color: white;

        &--media {
            width: 100%;
            height: auto;
            display: flex;
            justify-content: center;
            align-items: center;

            &__img {
                width: 100%;
            }
        }

        &--txt {
            display: flex;
            flex-direction: column;

            &__year {
                font-size: 16px;
                margin-bottom: 8px;
            }

            &__title {
                margin-bottom: 16px;
                font-size: 48px;
            }

            &__description {
                font-size: 20px;
            }
        }
    }
}
/* ... */

